@@ -2,11 +2,11 @@ class Solution {
     public List<List<Integer>> permuteUnique(int[] nums) {
         Arrays.sort(nums);
         List<List<Integer>> res = new ArrayList<>();
-        backtrack(nums, new boolean[nums.length], new ArrayList<>(), res);
+        backtrack(nums, new boolean[nums.length], new LinkedList<>(), res);
         return res;
     }
     
-    private void backtrack(int[] nums, boolean[] used, List<Integer> tmp, List<List<Integer>> res) {
+    private void backtrack(int[] nums, boolean[] used, LinkedList<Integer> tmp, List<List<Integer>> res) {
         if (tmp.size() == nums.length) {
             res.add(new ArrayList<>(tmp));
         } else {
@@ -18,7 +18,7 @@ class Solution {
                 tmp.add(nums[i]);
                 backtrack(nums, used, tmp, res);
                 used[i] = false;
-                tmp.remove(tmp.size() - 1);
+                tmp.removeLast();
             }
         }
     }
